--- a/fronted/package.json
+++ b/fronted/package.json
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@reduxjs/toolkit": "^2.2.7",
-    "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0",
-    "axios": "^1.7.2",
-    "next-auth": "^4.24.7",
     "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
-    "date-fns": "^3.6.0"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.4",
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.7",
-    "postcss": "^8.4.40",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.22",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
+    "typescript": "^5.5.4"
   }
 }
